# lxqt-qtplugin

./: AUTHORS  CHANGELOG  CMakeLists.txt  Digia-Qt-LGPL-Exception-version-1.1  README  README.md  lxqt-qtplugin.kdev4  lxqtguiplatformplugin.cpp  lxqtguiplatformplugin.h  qguiplatformplugin_p.h
qt4/: CMakeLists.txt
qt5/: CMakeLists.txt  lxqtplatformtheme.cpp  lxqtplatformtheme.h
src/: CMakeLists.txt  lxqtfiledialoghelper.cpp  lxqtfiledialoghelper.h  lxqtplatformtheme.cpp  lxqtplatformtheme.h  lxqtsystemtrayicon.cpp  lxqtsystemtrayicon.h  main.cpp  qiconloader.cpp
src/statusnotifieritem/: dbustypes.h  statusnotifieritem.cpp  statusnotifieritem.h
